Fix appearance of match date on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,3 +38,9 @@ form {
   text-transform: uppercase;
   padding: 5px;
 }
+
+@include media-breakpoint-up(lg) {
+  .match-date {
+    text-align: left !important;
+  }
+}
